Fix sinatra link

--- a/articles/wdtee.haml
+++ b/articles/wdtee.haml
@@ -23,7 +23,7 @@
   
   ![Photoshop designs](#{article_image_path(@article, "photoshop.jpg")})
 
-  The build was done with the trusty combination of [Sinatra](http://sinatrarb.com/), [HAML](http://haml-lang.com/), [SASS](http://sass-lang.com/) and [fancyviews](http://github.com/quackingduck/fancyviews). Deployment and hosting is on the awesome that is [Heroku](http://heroku.com/).
+  The build was done with the trusty combination of [Sinatra](http://www.sinatrarb.com/), [HAML](http://haml-lang.com/), [SASS](http://sass-lang.com/) and [fancyviews](http://github.com/quackingduck/fancyviews). Deployment and hosting is on the awesome that is [Heroku](http://heroku.com/).
 
   ## Embedding custom typefaces with @font-face
 
