Articles -> Thoughts, new thought, removed projects, updated gems

--- a/views/_meta.haml
+++ b/views/_meta.haml
@@ -1,15 +1,13 @@
 %p.intro
-  I'm <strong>Tim Lucas</strong>, a user experience designer and developer currently in Sydney&nbsp;Australia.
+  I'm <strong>Tim Lucas</strong>, a user experience developer and maker of things.
 
 %p.blurb
-  I run a <strong>web&nbsp;application design and development</strong> company <a
-  href="http://agencyrainford.com/">Agency&nbsp;Rainford</a>, <a
+  I occasionally <a href="/thoughts">write</a>, snap <a href="/photos">photos</a>, <a
   href="http://www.slideshare.net/toolmantim/">present</a> on various
-  technical topics, <a href="http://flickr.com/photos/toolmantim">snap the
-  occasional photo</a>, <a href="http://twitter.com/toolmantim">tweet</a>
+  technical topics, <a href="http://twitter.com/toolmantim">tweet</a>
   my going-ons, share <a href="http://github.com/toolmantim">teh codes</a>
-  and post other tid-bits to the&nbsp;<a
-  href="http://tumble.toolmantim.com/">tumble</a>.
+  and post tidbits to the&nbsp;<a
+  href="http://tumble.toolmantim.com/">scrapbook</a>.
 
 %p.recent
   Most recently I published
@@ -17,12 +15,12 @@
   == (#{@articles.first.published.strftime("%B %d, %Y")})
 
 %p.contact
-  Shoot an email to <span class="email">t.lucas@#{thisdomain}</span> and <strong>say&nbsp;hello</strong>.
+  Work with me via <a href="http://agencyrainford.com/">Agency Rainford</a>, or shoot an email to <span class="email">t.lucas@\#{thisdomain}</span> and <strong>say&nbsp;hello</strong>.
 
 %ul#navigation
   %li
-    %a{:href => "/articles"} Articles
+    %a{:href => "/thoughts"} Thoughts
   %li
     %a{:href => "/photos"} Photos
   %li
-    %a{:href => "/projects"} Projects
+    %a{:href => "http://tumble.toolmantim.com/"} Scrapbook
