--- a/views/article.haml
+++ b/views/article.haml
@@ -15,16 +15,10 @@
 
   .content= article_html(@article)
 
-  .feedback
-    %h1 Feedback and discussion
-    %p
-      For errors, updates or feedback please shoot an email to <span class="email">t.lucas@#{thisdomain}</span>. There&rsquo;s no place for discussion (yet)&mdash;see <a href="/articles/refreshed-realigned-and-ready-for-09#comments-and-discussion">my notes</a> and drop me a line if you&rsquo;ve got any ideas.
-
   - previous_article, next_article = previous_article(@article), next_article(@article)
 
   - if (previous_article || next_article)
     .more-reading
-      %h1 More reading&hellip;
       - if previous_article
         %p
           Previously:
@@ -35,4 +29,4 @@
           %a{:href => article_path(next_article)}== #{next_article.title}
 
 %h1.major
-  %a{:href => "/articles"} Articles
+  %a{:href => "/articles"} Thoughts
