--- a/views/error.haml
+++ b/views/error.haml
@@ -7,4 +7,4 @@
   &= @error
 
 %p
-  Drop an email to <span class="email">t.lucas@#{thisdomain}</span> and I'll get right onto it.
+  Drop an email to <span class="email">t.lucas@\#{thisdomain}</span> and I'll get right onto it.
