--- a/views/sitemap.haml
+++ b/views/sitemap.haml
@@ -9,7 +9,7 @@
     %priority 0.8
     %changefreq monthly
   %url
-    %loc http://toolmantim.com/articles
+    %loc http://toolmantim.com/thoughts
     %priority 0.8
     %changefreq weekly
   - for article in @articles
