--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -1,4 +1,5 @@
 @import views/stylesheets/reset.sass
+@import views/stylesheets/code_highlighting.sass
 
 !bright_blue = #7ab8f8
 !standard_text = #b8bdc1
@@ -87,7 +88,7 @@ body
   
   :position relative
   
-  p.intro, #navigation
+  p.intro, #navigation, p.work-with-me
     :position absolute
     :left 20px
     :width 400px
@@ -96,9 +97,15 @@ body
     :top 15px
     :font-size 2.1em
     :line-height 1.545em
-    
+  
   #navigation
     :bottom 20px
+    
+  p.work-with-me
+    :bottom 70px
+    a
+      img
+        :vertical-align middle
 
   p.contact
     :top 10.5em
@@ -242,10 +249,6 @@ body.archive p.page-desc
   :margin-left 230px
   :width 420px
 
-body.projects p.page-desc
-  :margin-left 340px
-  :width 310px
-
 !article_width = 540px
 
 .article
@@ -386,7 +389,7 @@ body.projects p.page-desc
     / img floated right within text
     .left.inset
       :margin-left 230px
-      
+
     #archived-comments
       h1
         +bell_gothic
@@ -399,90 +402,7 @@ body.projects p.page-desc
       :border-left 4px solid #666
       :padding-left 10px
       :color #fff
-    
-    @import views/stylesheets/code_highlighting.sass
 
-body.projects
-  ol.projects
-    > li
-      :padding-top 20px
-      :margin-bottom 30px
-      :float left
-      :width 100%
-      
-      h2, p
-        :width 420px
-        :float right
-        :clear right
-
-      h2
-        +big_white_heading
-        :margin-bottom 0.5em
-      p
-        +standard_text_size
-        :margin-bottom 1em
-
-        &.link
-          :font-size 1.2em
-        
-          a, a:active
-            +highlight_link
-            :float left
-
-          a:hover
-            +highlight_link_hover
-            
-          a:after
-            +highlight_after
-
-      .images
-        :width 320px
-          
-body.projects-js ol.projects > li
-  :position relative
-
-  .images
-    :position relative
-    :height 213px
-    li
-      :display inline
-    img
-      :display block
-      :position absolute
-      :top 0
-      :left 0
-  
-  .image-navigator
-    :height 10px
-    :position absolute
-    :bottom 5px
-    :right = 440-1+5px
-  
-    li
-      :display inline
-    a
-      :position relative
-      :display block
-      :float left
-      :width 10px
-      :height 10px
-      :text-indent -10000px
-      :margin-right 2px
-    
-      span
-        :position absolute
-        :top 0
-        :left 0
-        :width 100%
-        :height 100%
-        :background transparent url(/images/image-navigator-dots.gif) -10px 0 no-repeat
-      
-      &.active span, &.active:hover span
-        :background-position 0 0
-    
-      &:hover span
-        :background-position -20px 0
-        
 .not-found .content, .error .content
   p
     +standard_text_size
