Update the archive page description

--- a/views/archive.haml
+++ b/views/archive.haml
@@ -3,7 +3,7 @@
 
 %h1.major Thoughts
 
-%p.page-desc A random collection of infrequently-updated mostly-tech-related howtos, updates and what-nots.
+%p.page-desc A random collection of infrequently-updated mostly-tech-related thoughts, howtos, updates and what-nots.
 
 %ol.archive
   - for year in @articles_by_year_then_month.keys.sort.reverse
