Get some custom title goin on

--- a/articles/simplifying-sydney-opera-house-ticketing.haml
+++ b/articles/simplifying-sydney-opera-house-ticketing.haml
@@ -1,5 +1,6 @@
 -# title: Simplifying Sydney Opera House’s online ticket purchasing
 -# published: 2010-01-31
+-# custom title size: 484x60
 
 :markdown
 
