--- a/views/_meta.haml
+++ b/views/_meta.haml
@@ -1,5 +1,5 @@
 %p.intro
-  I’m <strong>Tim Lucas</strong>, a user experience developer and maker of things.
+  I’m <strong>Tim Lucas</strong>, a user experience developer currently in Sydney Australia.
 
 %p.blurb
   I occasionally <a href="/thoughts">write</a>, snap <a href="/photos">photos</a>, <a
