--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -256,9 +256,13 @@ body.archive p.page-desc
     +big_white_heading
     :margin-top 2em
     :margin-bottom 0.5em
+    
   .about
     h1
       :margin-top 0
+      &.custom-title
+        :text-indent -10000px
+        :background-repeat no-repeat
       
   .published
     +standard_text_size
