--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -283,6 +283,10 @@ body.archive p.page-desc
     :font-family "Lucida Grande", Arial, sans-serif
     :margin-bottom 50px
   
+    .intro
+      :margin 20px 0
+      :font-weight bold
+  
     > *
       :width = !article_width
 
