--- a/views/_meta.haml
+++ b/views/_meta.haml
@@ -3,11 +3,11 @@
 
 %p.blurb
   I occasionally <a href="/thoughts">write</a>, snap <a href="/photos">photos</a>, <a
-  href="http://www.slideshare.net/toolmantim/">present</a> on various
-  technical topics, <a href="http://twitter.com/toolmantim">tweet</a>
-  my going-ons, share <a href="http://github.com/toolmantim">teh codes</a>
+  href="http://www.slideshare.net/toolmantim/" rel="me">present</a> on various
+  technical topics, <a href="http://twitter.com/toolmantim" rel="me">tweet</a>
+  my going-ons, share <a href="http://github.com/toolmantim" rel="me">teh codes</a>
   and post tidbits to the&nbsp;<a
-  href="http://tumble.toolmantim.com/">scrapbook</a>.
+  href="http://tumble.toolmantim.com/" rel="me">scrapbook</a>.
 
 %p.recent
   Most recently I published
@@ -23,4 +23,4 @@
   %li
     %a{:href => "/photos"} Photos
   %li
-    %a{:href => "http://tumble.toolmantim.com/"} Scrapbook
+    %a{:href => "http://tumble.toolmantim.com/", :rel => "me"} Scrapbook
