Added awse Alec Baldwin reference

--- a/articles/simplifying-sydney-opera-house-ticketing.haml
+++ b/articles/simplifying-sydney-opera-house-ticketing.haml
@@ -33,7 +33,7 @@
   
   How many less displays would Apple sell without the big green **Add to cart** button in the top right? And how many less signups would Campaign Monitor get without the big blue **Try it for free** button smack in the centre of the homepage? Apple and Campaign Monitor are clearly doing better in the persuasion stakes.
   
-  Always Be Closing applies to online sales as much as it does to used car salesmen.
+  Always Be Closing applies to online sales as much as it does to [real estate salesmen](http://www.youtube.com/watch?v=TROhlThs9qY).
 
   So how could we improve the Sydney Opera House event page to be clearer and more persuasive?
   
