--- a/articles/simplifying-sydney-opera-house-ticketing.haml
+++ b/articles/simplifying-sydney-opera-house-ticketing.haml
@@ -4,7 +4,7 @@
 
 .intro
   :markdown
-    A few things about Sydney Opera House’s ticket purchase process have bugged me for a while now. Normally I'd just grumble and troop on, but I've been using the Sydney Opera House’s site long enough that I'd like to point out a few simple design changes, ones that would make my life easier and greatly increase sales in the process.
+    A few things about Sydney Opera House’s ticket purchasing process have bugged me for a while now. Normally I'd just grumble and troop on, but I've been using the Sydney Opera House’s site long enough now that I'd like to take the time to point out a few simple design changes, ones that would make my life easier, and I'm guessing increase their online sales in the process.
   
 :markdown
   [The Sydney Opera House](http://en.wikipedia.org/wiki/Sydney_Opera_House) is one of Australia's most famous cultural venues and host to over 450 musical and cultural performances per year. In 2007 locals [Frost Design](http://www.frostdesign.com.au/) were tasked with overhauling Sydney Opera House's brand and, along with the funky new brand, [a funky new website](http://www.sydneyoperahouse.com/).
