--- a/articles/simplifying-sydney-opera-house-ticketing.haml
+++ b/articles/simplifying-sydney-opera-house-ticketing.haml
@@ -48,7 +48,7 @@
 
   This redesign puts the most important call to action (the calender) in the top right, and in its own section, helping to attract the customer's eye and focus their problem solving skills on that one square. The number 15 stands out on the calendar, and there's a clear instruction above as to how to proceed.
   
-  Am incremental but significant improvment.
+  An incremental but significant improvment.
   
   ## One-night-only performances
 
