--- a/articles/simplifying-sydney-opera-house-ticketing.haml
+++ b/articles/simplifying-sydney-opera-house-ticketing.haml
@@ -62,6 +62,6 @@
   
   ## Define the most important scenario, and nail it
   
-  It's easy to lose track of the core scenario, the one most important to your business and customers. This is [Don't Make Me Think](http://www.sensible.com/dmmt.html) and [Submit Now](http://www.amazon.com/Submit-Now-Designing-Persuasive-Sites/dp/0735711704) kinda stuff. 
+  It's easy to lose track of the core scenario, the one most important to your business and customers. [Don't Make Me Think](http://www.sensible.com/dmmt.html) and [Submit Now](http://www.amazon.com/Submit-Now-Designing-Persuasive-Sites/dp/0735711704) kinda stuff. 
   
   Sydney Opera House's most important scenario is browsing to and booking an event, one that could be a lot simpler and persuasive. Let's cross our fingers and hope that next time we book an event we can simply hit a big fat **buy tickets** button.
