Renamed the Node and CoffeeScript article

--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -1,4 +1,4 @@
--# title: Getting started with CoffeeScript and Node
+-# title: Getting started with Node and CoffeeScript
 -# published: 2010-04-02
 
 :markdown
