--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -2,27 +2,27 @@
 -# published: 2010-04-02
 
 :markdown
-  Around these parts you used to find write-ups on how to get started with various new tech I'd been using. Well it's 2010 and time to revive that tradition, with a primer on getting up-and-running with [Node](http://nodejs.org/) and [CoffeeScript](http://jashkenas.github.com/coffee-script/).
+  Around these parts you used to find writeups on how to get started with various new bits of tech. Well it's 2010 and time to revive that tradition, with a primer on getting up-and-running with [Node](http://nodejs.org/) and [CoffeeScript](http://jashkenas.github.com/coffee-script/)!
   
   ## Node
   
   [Node](http://nodejs.org/) is a new Javascript runtime suited to writing asynchronous HTTP and socket-based apps.
   
-  Node marries Google's lightning-fast [v8 Javascript engine](http://code.google.com/p/v8/) (which powers Chrome's JS) with a completely asynchronous standard library. This is interesting for us web geeks as the majority of software we write spends most of its time, not burning CPU cycles doing hard calculations, but waiting on IO. Async programming is nothing new but [Ryan Dahl](http://tinyclouds.org/) figured Javascript's event-driven culture might be the perfect breeding ground for making async programming accessible, the [list of 3rd party Node modules](http://wiki.github.com/ry/node/modules) indicates it seems to be working.
+  Node marries Google's lightning-fast [v8 Javascript engine](http://code.google.com/p/v8/) (which powers Chrome's JS) with a completely asynchronous standard library. This is interesting for us web geeks because we the software we write tends to spend most of its time, not burning CPU cycles doing hard calculations, but waiting on IO. Async programming is nothing new, but [Ryan Dahl](http://tinyclouds.org/) figured Javascript's event-driven culture might be the perfect breeding ground for making async programming accessible, any by the [decently long list of 3rd party Node modules](http://wiki.github.com/ry/node/modules) it seems to be working.
   
   ## CoffeeScript
   
   [CoffeeScript](http://jashkenas.github.com/coffee-script/) is a technicolor dreamcoat for our old pal Javascript.
   
-  The features a programming language provides and the syntax you use to wield those features are two core aspects of a programming language. I've found Javascript can provide more power and flexibility than Ruby for composing software, but it Javascript fairs much worse at allowing concise expression.
+  The features a programming language provides, and the syntax you use to wield those features, are two core aspects of a programming language. I've found Javascript can provide more power and flexibility than Ruby for composing software, but Javascript fairs much worse at allowing concise expression.
   
-  What if we could have the JS language features, but with an expressive syntax that rivals not only Ruby but most other languages? That, mate, is why I'm introducing you to CoffeeScript.
+  What if we could have the JS language features with an expressive syntax that rivals not only Ruby but most other languages? That, mate, is why we're talking about CoffeeScript.
   
   CoffeeScript doesn't bring any new language features to the table—no library functions or object models—it's purely just a new syntax, one built with an understanding of how Javascript is and could be written, and a keen eye for beautiful and expressive syntax.
   
   You can compile CoffeeScript to Javascript via the `coffee` command line tool, directly in the browser via `<script type="text/coffeescript">`, or in any JS runtime via `CoffeeScript.compile`.
     
-  As well as compilation, CoffeeScript provides a binary (that same `coffee` command) which wraps Node with CoffeeScript capabilities, meaning you can `#!/usr/bin/env coffee`, and you're off to the races! The Node and CoffeeScript integration also means that as long as you've done a `require 'coffeescript'` you can `require` `.coffee` files just as you do your `.js` files.
+  As well as compilation, CoffeeScript provides a binary (that same `coffee` command) which wraps Node with CoffeeScript capabilities, meaning you can `#!/usr/bin/env coffee`, and you're off to the races! The Node and CoffeeScript integration also means you can `require` your `.coffee` files just like you do your `.js` files.
   
   ## Web serving with Node and CoffeeScript
   
@@ -52,7 +52,7 @@
   sys.puts &quot;Listening on port 5678&quot;
   </code></pre>
   
-  The above code creates a HTTP server that serves up index.html without ever blocking on IO—anonymous functions are passed into both `createServer` and `fs.readFile` which are only called when IO is complete.
+  The above code creates a HTTP server which on an incoming request serves up index.html without ever blocking on IO—anonymous functions are passed into both `createServer` and `fs.readFile` which are only called when IO is complete.
   
   ## HTML with jQuery and CoffeeScript
   
@@ -71,19 +71,17 @@
   &lt;/head&gt;
   </code></pre>
   
-  The above code loads jQuery and CoffeeScript. CoffeeScript then finds, compiles and executes all the `text/coffeescript` script elements.
+  After loading jQuery and CoffeeScript loads, CoffeeScript finds, compiles and executes all the `text/coffeescript` script elements.
   
-  `$ ->`, the equivalent to `$(function() {` or `$(document).ready({`, defines an onload function, with the function body (the line below) calling the `puts` function assigned above.
+  `$ ->` compiles to `$(function() {`, which defines an a `$(document).ready` jQuery callback, with the function body (the line below) calling `puts`.
   
-  `puts` simply takes a `msg` argument and appends it to the body.
-  
-  Simple!
+  `puts` is a function that takes a `msg` argument and simply appends it to the body.
   
   ## Booting it up
   
-  So how do we run all of this? We'll use Node/v8 via the `coffee` command on the backend, and a web browser on the front-end, with CoffeeScript pitching in on both sides.
+  So how do we run all of this? We'll use Node/v8 via the `coffee` command on the backend, and a web browser on the front-end, with CoffeeScript helping on both sides.
   
-  Copy the server code into `server.coffee`, the HTML page into `index.html`, and, finally, run `coffee server.coffee`. If all's well you should see something like:
+  Save the server code into `server.coffee`, the HTML into `index.html`, and, finally, run `coffee server.coffee`. If all's well you should see something like this:
   
   <pre><code class="shell">$ coffee server.coffee
   Listening on port 5678
@@ -95,12 +93,12 @@
   
   ## For bonus points: sockets!
   
-  If you're feeling brave you should add some [WebSocket](http://en.wikipedia.org/wiki/Web_Sockets) shenanigans to the html page and a WebSocket server on the Node side of things. That's when this stuff gets really fun!
+  If you're feeling brave, add some [WebSocket](http://en.wikipedia.org/wiki/Web_Sockets) shenanigans to the html page, and a WebSocket server on the Node side of things. That's when things get really fun!
   
   ## It's the future I tells ya
   
   It's hard to argue this combo aint pretty darn sweet.
   
-  Javascript is ubiquitus, v8 is seriously fast (which means for those *blocking* calculations it should scream too), and CoffeeScript makes programming Javascript a pleasure.
+  Javascript is ubiquitus, v8 is seriously fast (those *blocking* calculations should scream too), and CoffeeScript makes programming Javascript a pleasure.
   
   This is one stack I'll be spending plenty of quality time with.
