--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -12,7 +12,7 @@
   
   ## CoffeeScript
   
-  [CoffeeScript](http://jashkenas.github.com/coffee-script/) is a technicolor dreamcoat for our old pal Javascript.
+  [CoffeeScript](http://jashkenas.github.com/coffee-script/) is a technicolour dreamcoat for our old pal Javascript.
   
   The features a programming language provides, and the syntax you use to wield those features, are two core aspects of a programming language. I've found Javascript can provide more power and flexibility than Ruby for composing software, but Javascript fairs much worse at allowing concise expression.
   
