--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -14,7 +14,7 @@
   
   [CoffeeScript](http://jashkenas.github.com/coffee-script/) is a technicolour dreamcoat for our old pal Javascript.
   
-  The features a programming language provides, and the syntax you use to wield those features, are two core aspects of a programming language. I've found Javascript can provide more power and flexibility than Ruby for composing software, but Javascript fairs much worse at allowing concise expression.
+  The features a programming language provides, and the syntax you use to wield those features, are two core aspects of a programming language. I've found that in comparison to Ruby, Javascript can provide more power and flexibility for composing software but fairs much worse at allowing concise expression.
   
   What if we could have the JS language features with an expressive syntax that rivals not only Ruby but most other languages? That, mate, is why we're talking about CoffeeScript.
   
