--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -16,7 +16,7 @@
   
   The features a programming language provides, and the syntax you use to wield those features, are two core aspects of a programming language. I've found that in comparison to Ruby, Javascript can provide more power and flexibility for composing software but fairs much worse at allowing concise expression.
   
-  What if we could have the JS language features with an expressive syntax that rivals not only Ruby but most other languages? That, mate, is why we're talking about CoffeeScript.
+  What if we could have the JS language features with an expressive syntax that rivals not only Ruby, but most other languages? That, mate, is why we're talking about CoffeeScript.
   
   CoffeeScript doesn't bring any new language features to the table—no library functions or object models—it's purely just a new syntax, one built with an understanding of how Javascript is and could be written, and a keen eye for beautiful and expressive syntax.
   
