--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -71,11 +71,11 @@
   &lt;/head&gt;
   </code></pre>
   
-  jQuery and CoffeeScript are loading, and ten CoffeeScript finds, compiles and evals all the `text/coffeescript` script elements.
+  Firstly we load jQuery and CoffeeScript, and then CoffeeScript finds, compiles and evals all the `text/coffeescript` script elements.
   
-  `$ ->` compiles to `$(function() {`, which defines a `$(document).ready` jQuery event handler which simply calls `puts`.
-  
-  `puts` is a function that takes a `msg` argument and simply appends it to the body.
+  `puts` is a function that takes a `msg` argument and appends it to the body in a `<p>` tag.
+
+  `$ ->` is the same as `$(function() {`, your stock-standard jQuery document ready handler declaration.
   
   ## Booting it up
   
