--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -8,7 +8,7 @@
   
   [Node](http://nodejs.org/) is a new Javascript runtime suited to writing asynchronous HTTP and socket-based apps.
   
-  Node marries Google's lightning-fast [v8 Javascript engine](http://code.google.com/p/v8/) (which powers Chrome's JS) with a completely asynchronous standard library. This is interesting for us web geeks because we the software we write tends to spend most of its time, not burning CPU cycles doing hard calculations, but waiting on IO. Async programming is nothing new, but [Ryan Dahl](http://tinyclouds.org/) figured Javascript's event-driven culture might be the perfect breeding ground for making async programming accessible, any by the [decently long list of 3rd party Node modules](http://wiki.github.com/ry/node/modules) it seems to be working.
+  Node marries Google's lightning-fast [v8 Javascript engine](http://code.google.com/p/v8/) (which powers Chrome's JS) with a completely asynchronous standard library. This is interesting for us web geeks because the software we write tends to spend most of its time, not burning CPU cycles doing hard calculations, but waiting on IO. Async programming is nothing new, but [Ryan Dahl](http://tinyclouds.org/) figured Javascript's event-driven culture might be the perfect breeding ground for making async programming accessible, any by the [decently long list of 3rd party Node modules](http://wiki.github.com/ry/node/modules) it seems to be working.
   
   ## CoffeeScript
   
