--- a/articles/getting_started_with_node_and_coffeescript.haml
+++ b/articles/getting_started_with_node_and_coffeescript.haml
@@ -61,6 +61,7 @@
   <pre><code class="html">&lt;!DOCTYPE html&gt;
   &lt;html lang=&quot;en-x-lolcat&quot;&gt;
   &lt;head&gt;
+    &lt;title&gt;Teh coffees and nodes&lt;/title&gt;
     &lt;script src=&quot;http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js&quot;&gt;&lt;/script&gt;
     &lt;script src=&quot;http://jashkenas.github.com/coffee-script/extras/coffee-script.js&quot;&gt;&lt;/script&gt;
     &lt;script type=&quot;text/coffeescript&quot;&gt;
