--- a/articles/setting_up_a_new_remote_git_repository.haml
+++ b/articles/setting_up_a_new_remote_git_repository.haml
@@ -95,7 +95,7 @@
     url = ssh://myserver.com/var/git/myapp.git
     fetch = +refs/heads/*:refs/remotes/origin/*</code></pre>
   
-  We now have a remote repository "origin" that will fetch all of it's @refs/heads/*@ branches and store them in our local repo in @refs/remotes/origin/*@ when a @git fetch@ is performed.
+  We now have a remote repository "origin" that will fetch all of its @refs/heads/*@ branches and store them in our local repo in @refs/remotes/origin/*@ when a @git fetch@ is performed.
   
   h2. Pushing to the remote repository
   
