Added margins to paragraphs in tumblr captions

--- a/views/sample_tumble.haml
+++ b/views/sample_tumble.haml
@@ -57,12 +57,15 @@
       %img{ :src => "http://media.tumblr.com/l6xSmhBkDgv50uwefi9nWxZso1_400.jpg", :alt => "WetBack Catalogue - Pink Floyd by Storm Thorgerson, showing at the global gallery next week" }/
       %br/
       .caption
-        %a{ :href => "http://www.globalgallery.com.au/ViewAlldes.aspx?keyid=2676" }
-          WetBack Catalogue - Pink Floyd
-        by Storm Thorgerson, showing at
-        %a{ :href => "http://www.globalgallery.com.au/index.aspx?Status=profile&amp;orig=exhibCurr&amp;fname1=Storm&amp;lname1=Thorgerson" }
-          the global gallery
-        next week
+        %p
+          %a{ :href => "http://www.globalgallery.com.au/ViewAlldes.aspx?keyid=2676" }
+            WetBack Catalogue - Pink Floyd
+          by Storm Thorgerson, showing at
+          %a{ :href => "http://www.globalgallery.com.au/index.aspx?Status=profile&amp;orig=exhibCurr&amp;fname1=Storm&amp;lname1=Thorgerson" }
+            the global gallery
+          next week
+        %p
+          A great album.
 
   .post
     .info
