--- a/views/stylesheets/screen.sass
+++ b/views/stylesheets/screen.sass
@@ -481,6 +481,8 @@ body.archive p.page-desc
   .caption
     +standard_text_size
     :margin-top 1em
+    p + p
+      :margin-top .5em
       
   .regular
     h2
